@@ -1,3 +1,5 @@
+Oct 15, 2026: libarchive 3.8.2 released
+
 Jun 01, 2026: libarchive 3.8.1 released
 
 May 20, 2025: libarchive 3.8.0 released
